--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.2.4",
     "html5-qrcode": "^2.3.8",
+    "js-cookie": "^3.0.5",
     "jsqr": "^1.4.0",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
